--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 
 </head>
 <body>
-<h1><u>A data scientific analysis of how particular one is in choosing a romantic partner on self-description in Online Dating Participants </u>
+<h1><u>HELO data scientific analysis of how particular one is in choosing a romantic partner on self-description in Online Dating Participants </u>
 
 <p>
   <span style="color: darkred;">Journal of Wellness and Being</span>
